Release history for Dist-Zilla-Role-BundleDeps

{{$NEXT}}

0.002004 2016-05-20T23:18:11Z 7072374
 - Annotate documentation  to indicate need to add authordeps on bundles. ( PR #2, thanks to Olivier Mengué )

 [Dependencies::Stats]
 - Dependencies changed since 0.002003, see misc/*.deps* for details
 - configure: (suggests: +1)

0.002003 2016-05-01T03:40:22Z bbd3a71
 - No interesting changes.
 - Packaging cleaups, useless files etc, saves 4kb. If 4kb of savings is enough for Perl to break things, its good
   enough for me to at least justify a re-release.

 [Dependencies::Stats]
 - Dependencies changed since 0.002002, see misc/*.deps* for details
 - develop: +5 ↑1 -1 (suggests: ↑2)

0.002002 2015-05-05T22:26:50Z 2ee6cf4
 [Dependencies::Stats]
 - Dependencies changed since 0.002001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +10 ↑3 -2 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -1
 - test: +1 (recommends: +1 ↑1 ↓1)

 [Documentation]
 - Crossreference Dzil::Plugin::BundleInspector (Thanks Olivier Mengué/DOLMEN)
 - Closes #1

 [Metadata]
 - show 1x contributor
 - author = cpan

0.002001 2014-08-16T02:13:11Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace reduced.
 - metadata updated.
 - tests updated.

 [Dependencies::Stats]
 - Dependencies changed since 0.002000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - test: +1 -3 (recommends: ↑1 -1)

 [Metadata]
 - migrate to kentnl org.

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - Updated Test::ReportPrereqs

0.002000 2014-07-14T13:02:42Z
 [00 Major]
 - Mostly changes that might affect downstreams that work by hand.

 [01 Tooling]
 - Switched to EUMM ( https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f )
 - Toolkit Dependencies softened to recommendations.

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)