@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002005
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.002004 2016-05-20T23:18:11Z
 
