@@ -1,6 +1,14 @@
 Release history for Dist-Zilla-Role-BundleDeps
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/Dist-Zilla-Role-BundleDeps/issues/3
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002004, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑1)
+ - test: ↓1
 
 0.002004 2016-05-20T23:18:11Z 7072374
  - Annotate documentation  to indicate need to add authordeps on bundles. ( PR #2, thanks to Olivier Mengué )
